@@ -1017,3 +1017,4 @@ cdef extern from 'fmilib.h':
 
     fmi2_real_t fmi2_import_get_display_unit_factor(fmi2_import_display_unit_t *)
     fmi2_boolean_t fmi2_import_get_real_variable_relative_quantity(fmi2_import_real_variable_t* v)
+    fmi2_boolean_t fmi2_import_get_real_variable_unbounded(fmi2_import_real_variable_t* v)
